Fixed media query for "Coming soon!"
The "Coming soon!" text in "Upcoming project" box was not centered in small screens, impossible to remove right margin  (why?) so I added a 50px left margin which fixed it.

--- a/src/style.css
+++ b/src/style.css
@@ -352,6 +352,7 @@ nav ul li:hover {
   .app-description {
     max-width: 300px;
     font-size: 12px;
+    margin: 0 50px;
   }
   .logo {
     width: 25px;
